1.4.0:
* segway: add and fix better job handling for segway-task (identify)
* segway: add drmaa handling for "IBM Platform LSF"
* segway: fix not using user specified ruler_scale when set to 10

1.3.2:
* segway: add GMTK minimum version checking (1.4.2) to support better GMTK job
  handling
* segway: add a job resubmission test due to out of memory issues
* segway: add a smarter job resubmission due to out of memory issues
* segway: add a better error message for out of memory issues vs actual process
  issues
* segway: update documentation on debugging GMTK job issues
* segway: add a minimum job attempt of 2 before stopping all jobs
* segway: add a new bad input testcase for proper job termination
* segway: add a new simple semisupervision test case
* segway: clarify documentation on resolution support
* segway: simplify installation instructions
* segway: fix help not printing when no arguments are given
* segway: add resolution test case
* segway: clarify and add GPLV2 license
* segway: add better test result capturing


1.3.1:
* segway: fix numpy array casting bug in posterior with newer versions of
  numpy (>= 1.10)
* segway: fixed case where a track was specified that existed in more than 1
  genomedata
* segway: ruler default is now 10x resolution. Default resolution is still 1,
  so default ruler is 10
* segway: helpful error messages when segment table boundaries or the resolution
  is not divisible by the ruler


1.3.0:
* segway: fixed improper version reporting from --version option
* segway: added semi-supervsied mode support for soft assignment. See documentation 
  for more details. 
* segway: added the ability to use multiple genomedata archives
* segway: Added support for the SEGWAY_NUM_LOCAL_JOBS environment variable,
  which controls the number of concurrent processes used when 
  SEGWAY_CLUSTER=local is set (default: 32). (thanks to Max Libbrecht)


1.2.2:
* segway: updated test benchmark for better compatability with Torque/PBS