@@ -1,2 +1,2 @@
 label	len
-:	10::
+:	::
