@@ -867,6 +867,11 @@ class Runner(object):
                 if segment_length_step is None:
                     segment_length_step = ruler_scale
 
+                # When no minimum length is set, use the set ruler
+                minimum_segment_length = len_slice.start
+                if minimum_segment_length is None:
+                    minimum_segment_length = ruler_scale
+
                 # If this is the first row, get the first ruler length
                 if first_ruler_length is None:
                     first_ruler_length = segment_length_step
@@ -878,7 +883,7 @@ class Runner(object):
                                      " Found ruler lengths %d and %d" %
                                      (first_ruler_length, segment_length_step))
 
-                len_tuple = (len_slice.start, len_slice.stop,
+                len_tuple = (minimum_segment_length, len_slice.stop,
                              segment_length_step)
                 len_row = zeros((SEG_TABLE_WIDTH))
 
